Fixed wrong margin.

--- a/src/less/_blog_header.less
+++ b/src/less/_blog_header.less
@@ -109,7 +109,7 @@
       height: 38px;
       display: inline-block;
       vertical-align: middle;
-      margin-right: -4px;
+      margin-right: -5px;
       background-color: white;
       opacity: 0.8;
     }
